--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -26,8 +26,12 @@
 
 
 [[constraint]]
-  branch = "master"
-  name = "github.com/googollee/go-socket.io"
+  name = "github.com/gorilla/websocket"
+  version = "1.2.0"
+
+[[constraint]]
+  name = "github.com/labstack/echo"
+  version = "3.3.5"
 
 [prune]
   go-tests = true
